delete admin init endpoint to simplify
