# dsa-backend/handler/response.go
@@ -1,15 +1,5 @@
 package handler
 
-type initCheckResponse struct {
-	Initialized bool `json:"initialized"`
-}
-
-func newInitCheckResponse(initialized bool) initCheckResponse {
-	return initCheckResponse{
-		Initialized: initialized,
-	}
-}
-
 type createUserSuccess struct {
 	Msg string `json:"message"`
 }
@@ -18,4 +8,8 @@ func newCreateUserSuccess(msg string) createUserSuccess {
 	return createUserSuccess{
 		Msg: msg,
 	}
+}
+
+type userLoginResponse struct {
+	Token string `json:"token"`
 }
