# dsa-backend/handler/user.go
@@ -9,29 +9,44 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
+// Login godoc
+// @Summary User Login
+// @Description User login with user ID and password. Returns a JWT token if successful.
+// @Tags user
+// @Accept json
+// @Product json
+// @Param user body userLoginRequest true "User login info"
+// @Success 200 {object} userLoginResponse "Login successful. Returns a JWT token."
+// @Failure 400 {object} utils.Error "Bad request. This error occurs if the user ID or password is missing or incorrect."
+// @Failure 500 {string} utils.Error "Internal server error. This error occurs if there is an issue with the database or password hashing."
+// @Router /login [post]
 func (h *Handler) Login(c echo.Context) error {
 	ctx := context.Background()
 	var loginRequest userLoginRequest
-	err := c.Bind(&loginRequest)
+	err := loginRequest.bind(c)
 	if err != nil {
-		return c.String(http.StatusBadRequest, "bad request")
+		return c.JSON(http.StatusBadRequest, utils.NewErrorWithMessage("failed to bind request: "+err.Error()))
 	}
 
-	plain_password := loginRequest.User.Password
+	plain_password := loginRequest.Password
 
-	userRecord, err := h.userStore.GetUserByUserID(&ctx, loginRequest.User.UserId)
+	userRecord, err := h.userStore.GetUserByUserID(&ctx, loginRequest.UserId)
 
 	if err != nil {
-		return c.String(http.StatusBadRequest, "wrong userid or password")
+		return c.JSON(http.StatusInternalServerError, utils.NewErrorWithMessage("failed to get user: "+err.Error()))
+	}
+
+	if userRecord == nil {
+		return c.JSON(http.StatusBadRequest, utils.NewErrorWithMessage("user not found"))
 	}
 
 	hashed_password := userRecord.HashedPassword
 
-	// Authenticate user
+	// Verify provided password against the stored hashed password
 	err = bcrypt.CompareHashAndPassword([]byte(hashed_password), []byte(plain_password))
 
 	if err != nil {
-		return c.String(http.StatusBadRequest, "wrong userid or password")
+		return c.JSON(http.StatusBadRequest, utils.NewErrorWithMessage("wrong userid or password"))
 	}
 
 	// get user role
@@ -50,7 +65,7 @@ func (h *Handler) Login(c echo.Context) error {
 		return c.String(http.StatusInternalServerError, "failed to issue token")
 	}
 
-	return c.JSON(http.StatusOK, echo.Map{
-		"token": token,
+	return c.JSON(http.StatusOK, userLoginResponse{
+		Token: token,
 	})
 }
